@@ -9,8 +9,6 @@ import com.yahoo.component.chain.Chain;
 import com.yahoo.component.chain.dependencies.After;
 import com.yahoo.component.chain.dependencies.Provides;
 import com.yahoo.component.provider.ComponentRegistry;
-import com.yahoo.errorhandling.Results;
-import com.yahoo.errorhandling.Results.Builder;
 import com.yahoo.processing.IllegalInputException;
 import com.yahoo.processing.request.CompoundName;
 import com.yahoo.search.Query;
@@ -18,12 +16,13 @@ import com.yahoo.search.Result;
 import com.yahoo.search.Searcher;
 import com.yahoo.search.federation.selection.FederationTarget;
 import com.yahoo.search.federation.selection.TargetSelector;
+import com.yahoo.search.federation.sourceref.ModifyQueryAndResult;
+import com.yahoo.search.federation.sourceref.ResolveResult;
 import com.yahoo.search.federation.sourceref.SearchChainInvocationSpec;
 import com.yahoo.search.federation.sourceref.SearchChainResolver;
 import com.yahoo.search.federation.sourceref.SingleTarget;
 import com.yahoo.search.federation.sourceref.SourceRefResolver;
 import com.yahoo.search.federation.sourceref.SourcesTarget;
-import com.yahoo.search.federation.sourceref.UnresolvedSearchChainException;
 import com.yahoo.search.federation.sourceref.VirtualSourceResolver;
 import com.yahoo.search.query.Properties;
 import com.yahoo.search.result.ErrorMessage;
@@ -42,7 +41,6 @@ import com.yahoo.search.searchchain.model.federation.FederationOptions;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
@@ -53,8 +51,10 @@ import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.yahoo.collections.CollectionUtil.first;
@@ -89,13 +89,13 @@ public class FederationSearcher extends ForkingSearcher {
     public FederationSearcher(FederationConfig config, SchemaInfo schemaInfo,
                               ComponentRegistry<TargetSelector> targetSelectors) {
         this(createResolver(config),
-             VirtualSourceResolver.of(config),
+             createVirtualSourceResolver(config),
              resolveSelector(config.targetSelector(), targetSelectors),
              createSchema2Clusters(schemaInfo));
     }
 
     // for testing
-    public FederationSearcher(ComponentId id, SearchChainResolver searchChainResolver,
+    public FederationSearcher(SearchChainResolver searchChainResolver,
                               Map<String, List<String>> schema2Clusters) {
         this(searchChainResolver, VirtualSourceResolver.of(), null, schema2Clusters);
     }
@@ -108,6 +108,10 @@ public class FederationSearcher extends ForkingSearcher {
         sourceRefResolver = new SourceRefResolver(searchChainResolver, schema2Clusters);
         this.targetSelector = targetSelector;
         this.virtualSourceResolver = virtualSourceResolver;
+    }
+
+    private static VirtualSourceResolver createVirtualSourceResolver(FederationConfig config) {
+        return VirtualSourceResolver.of(config.target().stream().map(FederationConfig.Target::id).collect(Collectors.toUnmodifiableSet()));
     }
 
     private static TargetSelector resolveSelector(String selectorId,
@@ -150,17 +154,41 @@ public class FederationSearcher extends ForkingSearcher {
         return builder.build();
     }
 
-    private static void addSearchChain(SearchChainResolver.Builder builder,
-                                       FederationConfig.Target target, FederationConfig.Target.SearchChain searchChain) {
-        if (!target.id().equals(searchChain.searchChainId()))
-            throw new RuntimeException("Invalid federation config, " + target.id() + " != " + searchChain.searchChainId());
+    private static class SearchChaininvocationProxy extends SearchChainInvocationSpec {
+        SearchChaininvocationProxy(ComponentId searchChainId, FederationOptions federationOptions, String schema) {
+            super(searchChainId, federationOptions, List.of(schema));
+        }
 
-        builder.addSearchChain(ComponentId.fromString(searchChain.searchChainId()),
-                               federationOptions(searchChain), searchChain.documentTypes());
+        @Override
+        public void modifyTargetQuery(Query query) {
+            query.getModel().setSources(searchChainId.getName());
+            query.getModel().setRestrict(schemas.get(0));
+        }
+    }
+
+    private static void addSearchChain(SearchChainResolver.Builder builder,
+                                       FederationConfig.Target target,
+                                       FederationConfig.Target.SearchChain searchChain)
+    {
+        String id = target.id();
+        if (!id.equals(searchChain.searchChainId()))
+            throw new RuntimeException("Invalid federation config, " + id + " != " + searchChain.searchChainId());
+
+        ComponentId searchChainId = ComponentId.fromString(id);
+        builder.addSearchChain(searchChainId, federationOptions(searchChain), searchChain.documentTypes());
+        // Here we make synthetic SearchChain proxies for all cluster.schema combinations possible
+        // Given a source on the form saerchcluster.schema will rewrite it to source=searchcluster and restrict to schema.
+        // TODO Consider solving this in the config model by making many synthetic search clusters
+        for (String schema : searchChain.documentTypes()) {
+            String virtualChainId = id + "." + schema;
+            builder.addSearchChain(ComponentId.fromString(virtualChainId),
+                    new SearchChaininvocationProxy(searchChainId, federationOptions(searchChain).setUseByDefault(false), schema));
+        }
     }
 
     private static void addSourceForProvider(SearchChainResolver.Builder builder, FederationConfig.Target target,
-                                             FederationConfig.Target.SearchChain searchChain, boolean isDefaultProvider) {
+                                             FederationConfig.Target.SearchChain searchChain, boolean isDefaultProvider)
+    {
         builder.addSourceForProvider(
                 ComponentId.fromString(target.id()),
                 ComponentId.fromString(searchChain.providerId()),
@@ -177,18 +205,46 @@ public class FederationSearcher extends ForkingSearcher {
                 setRequestTimeoutInMilliseconds(searchChain.requestTimeoutMillis());
     }
 
+    private static List<String> extractErrors(List<ResolveResult> results) {
+        List<String> errors = List.of();
+        for (ResolveResult result : results) {
+            if (result.errorMsg() != null) {
+                if (errors.isEmpty()) {
+                    errors = new ArrayList<>();
+                }
+                errors.add(result.errorMsg());
+            }
+        }
+        return errors;
+    }
+
+    private static List<SearchChainInvocationSpec> extractSpecs(List<ResolveResult> results) {
+        List<SearchChainInvocationSpec> errors = List.of();
+        for (ResolveResult result : results) {
+            if (result.invocationSpec() != null) {
+                if (errors.isEmpty()) {
+                    errors = List.of(result.invocationSpec());
+                } else if (errors.size() == 1) {
+                    errors = new ArrayList<>(errors);
+                    errors.add(result.invocationSpec());
+                } else {
+                    errors.add(result.invocationSpec());
+                }
+            }
+        }
+        return errors;
+    }
+
     @Override
     public Result search(Query query, Execution execution) {
         Result mergedResults = execution.search(query);
 
-        Results<SearchChainInvocationSpec, UnresolvedSearchChainException> targets =
-                getTargets(query.getModel().getSources(), query.properties());
-        warnIfUnresolvedSearchChains(targets.errors(), mergedResults.hits());
+        var targets = getTargets(query.getModel().getSources(), query.properties());
+        warnIfUnresolvedSearchChains(extractErrors(targets), mergedResults.hits());
 
-        Collection<SearchChainInvocationSpec> prunedTargets =
-                pruneTargetsWithoutDocumentTypes(query.getModel().getRestrict(), targets.data());
+        var prunedTargets = pruneTargetsWithoutDocumentTypes(query.getModel().getRestrict(), extractSpecs(targets));
 
-        Results<Target, ErrorMessage> regularTargetHandlers = resolveSearchChains(prunedTargets, execution.searchChainRegistry());
+        var regularTargetHandlers = resolveSearchChains(prunedTargets, execution.searchChainRegistry());
         query.errors().addAll(regularTargetHandlers.errors());
 
         Set<Target> targetHandlers = new LinkedHashSet<>(regularTargetHandlers.data());
@@ -209,7 +265,6 @@ public class FederationSearcher extends ForkingSearcher {
 
     private void search(Query query, Execution execution, Target target, Result mergedResults) {
         mergeResult(query, target, mergedResults, search(query, execution, target).orElse(createSearchChainTimedOutResult(query, target)));
-
     }
 
     private void search(Query query, Execution execution, Collection<Target> targets, Result mergedResults) {
@@ -285,32 +340,19 @@ public class FederationSearcher extends ForkingSearcher {
                 .forEach((k, v) -> outgoing.properties().set(k, v));
     }
 
-    private ErrorMessage missingSearchChainsErrorMessage(List<UnresolvedSearchChainException> unresolvedSearchChainExceptions) {
-        String message = String.join(" ", getMessagesSet(unresolvedSearchChainExceptions)) +
+    private ErrorMessage missingSearchChainsErrorMessage(List<String> errors) {
+        String message = String.join(" ", new TreeSet<>(errors)) +
                                      " Valid source refs are " + String.join(", ", allSourceRefDescriptions()) +'.';
         return ErrorMessage.createInvalidQueryParameter(message);
     }
 
     private List<String> allSourceRefDescriptions() {
-        List<String> descriptions = new ArrayList<>();
-
-        for (com.yahoo.search.federation.sourceref.Target target : searchChainResolver.allTopLevelTargets())
-            descriptions.add(target.searchRefDescription());
-        return descriptions;
+        return searchChainResolver.allTopLevelTargets().stream().map(com.yahoo.search.federation.sourceref.Target::searchRefDescription).toList();
     }
 
-    private static Set<String> getMessagesSet(List<UnresolvedSearchChainException> unresolvedSearchChainExceptions) {
-        Set<String> messages = new LinkedHashSet<>();
-        for (UnresolvedSearchChainException exception : unresolvedSearchChainExceptions) {
-            messages.add(exception.getMessage());
-        }
-        return messages;
-    }
-
-    private void warnIfUnresolvedSearchChains(List<UnresolvedSearchChainException> missingTargets,
-                                              HitGroup errorHitGroup) {
-        if (!missingTargets.isEmpty()) {
-            errorHitGroup.addError(missingSearchChainsErrorMessage(missingTargets));
+    private void warnIfUnresolvedSearchChains(List<String> errorMessages, HitGroup errorHitGroup) {
+        if (!errorMessages.isEmpty()) {
+            errorHitGroup.addError(missingSearchChainsErrorMessage(errorMessages));
         }
     }
 
@@ -318,7 +360,7 @@ public class FederationSearcher extends ForkingSearcher {
     public Collection<CommentedSearchChain> getSearchChainsForwarded(SearchChainRegistry registry) {
         List<CommentedSearchChain> searchChains = new ArrayList<>();
 
-        for (com.yahoo.search.federation.sourceref.Target target : searchChainResolver.allTopLevelTargets()) {
+        for (var target : searchChainResolver.allTopLevelTargets()) {
             if (target instanceof SourcesTarget) {
                 searchChains.addAll(commentedSourceProviderSearchChains((SourcesTarget)target, registry));
             } else if (target instanceof SingleTarget) {
@@ -359,8 +401,7 @@ public class FederationSearcher extends ForkingSearcher {
     public void fill(Result result, String summaryClass, Execution execution) {
         UniqueExecutionsToResults uniqueExecutionsToResults = new UniqueExecutionsToResults();
         addResultsToFill(result.hits(), result, summaryClass, uniqueExecutionsToResults);
-        Set<Entry<Chain<Searcher>, Map<Query, Result>>> resultsForAllChains = 
-                uniqueExecutionsToResults.resultsToFill.entrySet();
+        var resultsForAllChains = uniqueExecutionsToResults.resultsToFill.entrySet();
         int numberOfCallsToFillNeeded = 0;
 
         for (Entry<Chain<Searcher>, Map<Query, Result>> resultsToFillForAChain : resultsForAllChains) {
@@ -443,40 +484,32 @@ public class FederationSearcher extends ForkingSearcher {
         return orderer;
     }
 
-    private Results<SearchChainInvocationSpec, UnresolvedSearchChainException> getTargets(Set<String> sources, Properties properties) {
+    private List<ResolveResult> getTargets(Set<String> sources, Properties properties) {
         return sources.isEmpty() ?
                 defaultSearchChains(properties):
                 resolveSources(sources, properties);
     }
 
 
-    private Results<SearchChainInvocationSpec, UnresolvedSearchChainException> resolveSources(Set<String> sourcesInQuery, Properties properties) {
-        Results.Builder<SearchChainInvocationSpec, UnresolvedSearchChainException> result = new Builder<>();
+    private List<ResolveResult> resolveSources(Set<String> sourcesInQuery, Properties properties) {
+        List<ResolveResult> result = new ArrayList<>();
         Set<String> sources = virtualSourceResolver.resolve(sourcesInQuery);
 
         for (String source : sources) {
-            try {
-                result.addAllData(sourceRefResolver.resolve(asSourceSpec(source), properties));
-            } catch (UnresolvedSearchChainException e) {
-                result.addError(e);
-            }
+            result.addAll(sourceRefResolver.resolve(asSourceSpec(source), properties));
         }
 
-        return result.build();
+        return List.copyOf(result);
     }
 
-    public Results<SearchChainInvocationSpec, UnresolvedSearchChainException> defaultSearchChains(Properties sourceToProviderMap) {
-        Results.Builder<SearchChainInvocationSpec, UnresolvedSearchChainException> result = new Builder<>();
+    public List<ResolveResult> defaultSearchChains(Properties sourceToProviderMap) {
+        List<ResolveResult> result = new ArrayList<>();
 
-        for (com.yahoo.search.federation.sourceref.Target target : searchChainResolver.defaultTargets()) {
-            try {
-                result.addData(target.responsibleSearchChain(sourceToProviderMap));
-            } catch (UnresolvedSearchChainException e) {
-                result.addError(e);
-            }
+        for (var target : searchChainResolver.defaultTargets()) {
+            result.add(target.responsibleSearchChain(sourceToProviderMap));
         }
 
-        return result.build();
+        return List.copyOf(result);
     }
 
 
@@ -563,7 +596,7 @@ public class FederationSearcher extends ForkingSearcher {
     }
 
     private static <T> List<Target> getAdditionalTargets(Query query, Execution execution, TargetSelector<T> targetSelector) {
-        if (targetSelector == null) return Collections.emptyList();
+        if (targetSelector == null) return List.of();
 
         ArrayList<Target> result = new ArrayList<>();
         for (FederationTarget<T> target: targetSelector.getTargets(query, execution.searchChainRegistry()))
@@ -578,7 +611,7 @@ public class FederationSearcher extends ForkingSearcher {
         Collection<SearchChainInvocationSpec> prunedTargets = new ArrayList<>();
 
         for (SearchChainInvocationSpec target : targets) {
-            if (target.documentTypes.isEmpty() || documentTypeIntersectionIsNonEmpty(restrict, target))
+            if (target.schemas.isEmpty() || documentTypeIntersectionIsNonEmpty(restrict, target))
                 prunedTargets.add(target);
         }
 
@@ -586,7 +619,7 @@ public class FederationSearcher extends ForkingSearcher {
     }
 
     private boolean documentTypeIntersectionIsNonEmpty(Set<String> restrict, SearchChainInvocationSpec target) {
-        for (String documentType : target.documentTypes) {
+        for (String documentType : target.schemas) {
             if (restrict.contains(documentType))
                 return true;
         }
@@ -616,11 +649,9 @@ public class FederationSearcher extends ForkingSearcher {
     }
 
     /** A target for federation, containing a chain to which a federation query can be forwarded. */
-    static abstract class Target {
+    static abstract class Target implements ModifyQueryAndResult {
 
         abstract Chain<Searcher> getChain();
-        abstract void modifyTargetQuery(Query query);
-        abstract void modifyTargetResult(Result result);
 
         ComponentId getId() {
             return getChain().getId();
@@ -651,9 +682,9 @@ public class FederationSearcher extends ForkingSearcher {
         Chain<Searcher> getChain() { return chain; }
 
         @Override
-        void modifyTargetQuery(Query query) {}
+        public void modifyTargetQuery(Query query) { target.modifyTargetQuery(query); }
         @Override
-        void modifyTargetResult(Result result) {}
+        public void modifyTargetResult(Result result) { target.modifyTargetResult(result); }
 
         @Override
         public FederationOptions federationOptions() { return target.federationOptions; }
@@ -707,12 +738,6 @@ public class FederationSearcher extends ForkingSearcher {
     }
 
     private record Window(int hits, int offset) {
-
-        public Integer get(CompoundName parameterName) {
-            if (parameterName.equals(Query.HITS)) return hits;
-            if (parameterName.equals(Query.OFFSET)) return offset;
-            return null;
-        }
 
         public static Window from(Query query) {
             return new Window(query.getHits(), query.getOffset());
