@@ -15,13 +15,13 @@ import com.yahoo.search.grouping.GroupingRequest;
 import com.yahoo.search.grouping.GroupingValidator;
 import com.yahoo.search.grouping.result.Group;
 import com.yahoo.search.grouping.result.RootGroup;
+import com.yahoo.search.query.Trace;
 import com.yahoo.search.result.ErrorMessage;
 import com.yahoo.search.result.Hit;
 import com.yahoo.search.searchchain.Execution;
 import com.yahoo.searchlib.aggregation.Grouping;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -99,29 +99,33 @@ public class GroupingExecutor extends Searcher {
         return result;
     }
 
+    private String extractSummaryClass(Hit hit, String summaryClass) {
+        Object metaData = hit.getSearcherSpecificMetaData(this);
+        if (metaData instanceof String metaDataString) {
+            // Use the summary class specified by grouping, set in HitConverter, for the first fill request
+            // after grouping. This assumes the first fill request is using the default summary class,
+            // which may be a fragile assumption. But currently we cannot do better because the difference
+            // between explicit and implicit summary class in fill is erased by the Execution.
+            //
+            // We reset the summary class here such that following fill calls will execute with the
+            // summary class they specify
+            hit.setSearcherSpecificMetaData(this, null);
+            return metaDataString;
+        }
+        return summaryClass;
+    }
+
     @Override
     public void fill(Result result, String summaryClass, Execution execution) {
         Map<String, Result> summaryMap = new HashMap<>();
         for (Iterator<Hit> it = result.hits().unorderedDeepIterator(); it.hasNext(); ) {
             Hit hit = it.next();
-            Object metaData = hit.getSearcherSpecificMetaData(this);
-            if (metaData instanceof String) {
-                // Use the summary class specified by grouping, set in HitConverter, for the first fill request
-                // after grouping. This assumes the first fill request is using the default summary class,
-                // which may be a fragile assumption. But currently we cannot do better because the difference
-                // between explicit and implicit summary class in fill is erased by the Execution.
-                // 
-                // We reset the summary class here such that following fill calls will execute with the
-                // summary class they specify
-                summaryClass = (String) metaData;
-                hit.setSearcherSpecificMetaData(this, null);
-            }
-            Result summaryResult = summaryMap.get(summaryClass);
-            if (summaryResult == null) {
-                summaryResult = new Result(result.getQuery());
-                summaryMap.put(summaryClass, summaryResult);
-            }
+            Result summaryResult = summaryMap.computeIfAbsent(extractSummaryClass(hit, summaryClass), key -> new Result(result.getQuery()));
             summaryResult.hits().add(hit);
+        }
+        Trace trace = result.getQuery().getTrace();
+        if (trace.isTraceable(2)) {
+            trace.trace("GroupingExecutor.fill(" + summaryClass + ") = {" + summaryMap.keySet() + "}", 2);
         }
         for (Map.Entry<String, Result> entry : summaryMap.entrySet()) {
             Result res = entry.getValue();
@@ -219,7 +223,7 @@ public class GroupingExecutor extends Searcher {
         if (lastPass > 0) {
             baseRoot = origRoot.clone();
         }
-        if (query.getTrace().isTraceable(3) && query.getGroupingSessionCache()) {
+        if (query.getTrace().isTraceable(3)) {
             query.trace("Grouping in " + (lastPass + 1) + " passes. SessionId='" + query.getSessionId() + "'.", 3);
         }
         for (int pass = 0; pass <= lastPass; ++pass) {
@@ -357,7 +361,7 @@ public class GroupingExecutor extends Searcher {
     public static List<Grouping> getGroupingList(Query query) {
         Object obj = query.properties().get(PROP_GROUPINGLIST);
         if (!(obj instanceof List)) {
-            return Collections.emptyList();
+            return List.of();
         }
         return (List<Grouping>)obj;
     }
