@@ -1,11 +1,12 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.indexinglanguage.expressions;
 
+import com.yahoo.document.CollectionDataType;
 import com.yahoo.document.DataType;
 import com.yahoo.document.datatypes.FieldValue;
 import com.yahoo.vespa.indexinglanguage.ExpressionConverter;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -25,7 +26,7 @@ public class ChoiceExpression extends ExpressionList<Expression> {
     }
 
     public ChoiceExpression(Expression... choices) {
-        this(Arrays.asList(choices));
+        this(List.of(choices));
     }
 
     public ChoiceExpression(Collection<? extends Expression> choices) {
@@ -38,21 +39,49 @@ public class ChoiceExpression extends ExpressionList<Expression> {
     }
 
     @Override
-    protected void doExecute(ExecutionContext context) {
-        FieldValue input = context.getValue();
-        for (Expression expression : this) {
-            context.setValue(input).execute(expression);
-            if (context.getValue() != null)
-                break; // value found
+    public DataType setInputType(DataType inputType, VerificationContext context) {
+        super.setInputType(inputType, context);
+
+        DataType resolvedType = null;
+        boolean resolvedTypeNeverAssigned = true;
+        for (var expression : expressions()) {
+            DataType outputType = expression.setInputType(inputType, context);
+            resolvedType = resolvedTypeNeverAssigned ? outputType : mostGeneralOf(resolvedType, outputType);
+            resolvedTypeNeverAssigned = false;
         }
+        return resolvedType != null ? resolvedType : getOutputType(context);
+    }
+
+    @Override
+    public DataType setOutputType(DataType outputType, VerificationContext context) {
+        super.setOutputType(outputType, context);
+
+        DataType resolvedType = null;
+        boolean resolvedTypeNeverAssigned = true;
+        for (var expression : expressions()) {
+            DataType inputType = expression.setOutputType(outputType, context);
+            resolvedType = resolvedTypeNeverAssigned ? inputType : mostGeneralOf(resolvedType, inputType);
+            resolvedTypeNeverAssigned = false;
+        }
+        return resolvedType != null ? resolvedType : getInputType(context);
     }
 
     @Override
     protected void doVerify(VerificationContext context) {
-        DataType input = context.getValueType();
-        context.setValueType(input);
+        DataType input = context.getCurrentType();
+        context.setCurrentType(input);
         for (Expression exp : this)
-            context.setValueType(input).execute(exp);
+            context.setCurrentType(input).verify(exp);
+    }
+
+    @Override
+    protected void doExecute(ExecutionContext context) {
+        FieldValue input = context.getCurrentValue();
+        for (Expression expression : this) {
+            context.setCurrentValue(input).execute(expression);
+            if (context.getCurrentValue() != null)
+                break; // value found
+        }
     }
 
     private static DataType resolveInputType(Collection<? extends Expression> list) {
