@@ -8,7 +8,6 @@ import com.yahoo.language.simple.SimpleTokenizer;
 import org.junit.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.ArrayList;
 
@@ -21,13 +20,13 @@ public class StemmerImplTestCase {
 
     @Test
     public void requireThatStemIsNormalizedAndLowerCased() {
-        assertStem("FOO", Arrays.asList("foo"));
-        assertStem("a\u030A", Arrays.asList("\u00E5"));
+        assertStem("FOO", List.of("foo"), true);
+        assertStem("a\u030A", List.of("\u00E5"), false);
     }
 
     @Test
     public void requireThatOnlyIndexableTokensAreReturned() {
-        assertStem("foo. (bar)!", Arrays.asList("foo", "bar"));
+        assertStem("foo. (bar)!", List.of("foo", "bar"), true);
     }
 
     @Test
@@ -43,24 +42,24 @@ public class StemmerImplTestCase {
         Tokenizer tokenizer = Mockito.mock(Tokenizer.class);
         Mockito.when(tokenizer.tokenize(Mockito.anyString(), Mockito.<Language>any(), Mockito.<StemMode>any(),
                                         Mockito.anyBoolean()))
-               .thenReturn(Arrays.<Token>asList(token));
+               .thenReturn(List.of(token));
         Stemmer stemmer = new StemmerImpl(tokenizer);
 
         token.setSpecialToken(false);
-        assertEquals(Arrays.asList(new StemList("c"),
+        assertEquals(List.of(new StemList("c"),
                                    new StemList("p"),
                                    new StemList("p")),
-                     stemmer.stem("c++", StemMode.SHORTEST, Language.ENGLISH));
+                     stemmer.stem("c++", Language.ENGLISH,StemMode.SHORTEST, true));
 
         token.setSpecialToken(true);
-        assertEquals(Arrays.asList(new StemList("c++")),
-                     stemmer.stem("c++", StemMode.SHORTEST, Language.ENGLISH));
+        assertEquals(List.of(new StemList("c++")),
+                     stemmer.stem("c++", Language.ENGLISH, StemMode.SHORTEST, true));
     }
 
-    private static void assertStem(String input, List<String> expectedStems) {
+    private static void assertStem(String input, List<String> expectedStems, boolean removeAccents) {
         Stemmer stemmer = new StemmerImpl(new SimpleTokenizer(new SimpleNormalizer()));
         List<String> got = new ArrayList<>();
-        for (StemList word : stemmer.stem(input, StemMode.ALL, Language.ENGLISH)) {
+        for (StemList word : stemmer.stem(input, Language.ENGLISH, StemMode.ALL, removeAccents)) {
             got.add(word.get(0));
         }
         assertEquals(expectedStems, got);
