@@ -19,7 +19,6 @@ import com.yahoo.tensor.functions.TensorFunction;
 import com.yahoo.tensor.functions.ToStringContext;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -60,8 +59,7 @@ public class TensorFunctionNode extends CompositeNode {
     }
 
     private static ScalarFunction<Reference> transform(ScalarFunction<Reference> input,
-                                                       Function<ExpressionNode, ExpressionNode> transformer)
-    {
+                                                       Function<ExpressionNode, ExpressionNode> transformer) {
         if (input instanceof ExpressionScalarFunction wrapper) {
             ExpressionNode transformed = transformer.apply(wrapper.expression);
             return new ExpressionScalarFunction(transformed);
@@ -238,7 +236,7 @@ public class TensorFunctionNode extends CompositeNode {
                         .map(ExpressionTensorFunction::new)
                         .collect(Collectors.toList());
             else
-                return Collections.emptyList();
+                return List.of();
         }
 
         @Override
@@ -412,6 +410,12 @@ public class TensorFunctionNode extends CompositeNode {
         public TensorType getType(Reference name) {
             return delegate.getType(name);
         }
+
+        @Override
+        public String resolveBinding(String argument) {
+            return delegate.resolveBinding(argument);
+        }
+
     }
 
     private static Context asContext(EvaluationContext<Reference> generic) {
