@@ -1,7 +1,6 @@
 // Copyright Vespa.ai. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.athenz.client.zms;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.yahoo.athenz.auth.util.Crypto;
 import com.yahoo.security.KeyUtils;
 import com.yahoo.vespa.athenz.api.AthenzAssertion;
@@ -43,7 +42,6 @@ import javax.net.ssl.SSLContext;
 import java.net.URI;
 import java.security.PublicKey;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -52,8 +50,6 @@ import java.util.OptionalLong;
 import java.util.Set;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-
-import static com.yahoo.yolean.Exceptions.uncheck;
 
 
 /**
@@ -88,7 +84,7 @@ public class DefaultZmsClient extends ClientBase implements ZmsClient {
         HttpUriRequest request = RequestBuilder.put()
                 .setUri(uri)
                 .addHeader(createCookieHeader(oAuthCredentials))
-                .setEntity(toJsonStringEntity(new TenancyRequestEntity(tenantDomain, providerService, Collections.emptyList())))
+                .setEntity(toJsonStringEntity(new TenancyRequestEntity(tenantDomain, providerService, List.of())))
                 .build();
         execute(request, response -> readEntity(response, Void.class));
     }
@@ -232,10 +228,9 @@ public class DefaultZmsClient extends ClientBase implements ZmsClient {
 
     @Override
     public void updateDomain(AthenzDomain domain, String mainKey, Map<String, Object> attributes) {
-        String domainMeta = uncheck(() -> new ObjectMapper().writeValueAsString(attributes));
         HttpUriRequest request = RequestBuilder.put()
                                                .setUri(zmsUrl.resolve("domain/%s/meta/system/%s".formatted(domain.getName(), mainKey)))
-                                               .setEntity(new StringEntity(domainMeta, ContentType.APPLICATION_JSON))
+                                               .setEntity(toJsonStringEntity(attributes))
                                                .build();
         execute(request, response -> readEntity(response, Void.class));
     }
